--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f180690
-	trimbase = 
+	trim = node_manager_fkie
+	base = 53eda3c
+	trimbase = f180690
 	parent = upstream
 	previous = c8780cb
