--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = e142027
-	trimbase = 
+	trim = master_discovery_fkie
+	base = 151ce65
+	trimbase = e142027
 	parent = upstream
 	previous = c8780cb
