--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 03b2448
-	trimbase = 
+	trim = default_cfg_fkie
+	base = 87ff482
+	trimbase = 03b2448
 	parent = upstream
 	previous = c8780cb
