--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d09e7ed
-	trimbase = 
+	trim = master_sync_fkie
+	base = 8938b43
+	trimbase = d09e7ed
 	parent = upstream
 	previous = c8780cb
