--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = caa3c75
-	trimbase = 
+	trim = multimaster_fkie
+	base = 13aa106
+	trimbase = caa3c75
 	parent = upstream
 	previous = c8780cb
