--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 87ff482
+	base = 40f5ca3
 	trimbase = 
 	parent = release/groovy/default_cfg_fkie
-	previous = 
+	previous = 87ff482
