--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a8c4ef2
+	base = ae9ecf1
 	trimbase = 
 	parent = debian/groovy/default_cfg_fkie
-	previous = 
+	previous = a8c4ef2
