--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8938b43
+	base = 5c0223b
 	trimbase = 
 	parent = release/groovy/master_sync_fkie
-	previous = 
+	previous = 8938b43
