--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = de49de5
+	base = da76d39
 	trimbase = 
 	parent = debian/groovy/master_sync_fkie
-	previous = 
+	previous = de49de5
