--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 151ce65
+	base = a0fe407
 	trimbase = 
 	parent = release/groovy/master_discovery_fkie
-	previous = 
+	previous = 151ce65
