--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 1bc1903
+	base = 943a668
 	trimbase = 
 	parent = debian/groovy/master_discovery_fkie
-	previous = 
+	previous = 1bc1903
