--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 13aa106
+	base = 647da32
 	trimbase = 
 	parent = release/groovy/multimaster_fkie
-	previous = 
+	previous = 13aa106
