--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4829120
+	base = c203fa2
 	trimbase = 
 	parent = debian/groovy/multimaster_fkie
-	previous = 
+	previous = 4829120
