--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 53eda3c
+	base = 553228f
 	trimbase = 
 	parent = release/groovy/node_manager_fkie
-	previous = 
+	previous = 53eda3c
