--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5c4e254
+	base = 4974a37
 	trimbase = 
 	parent = debian/groovy/node_manager_fkie
-	previous = 
+	previous = 5c4e254
