Imported upstream version '0.2.2' of 'None'

--- a/master_sync_fkie/CMakeLists.txt
+++ b/master_sync_fkie/CMakeLists.txt
@@ -1,6 +1,12 @@
-cmake_minimum_required(VERSION 2.4)
-if(CATKIN_TOPLEVEL)
-include(catkin.cmake)
-else()
-include(rosbuild.cmake)
-endif()
+cmake_minimum_required(VERSION 2.8.3)
+project(master_sync_fkie)
+find_package(catkin REQUIRED)
+
+catkin_package()
+catkin_python_setup()
+
+install(
+    PROGRAMS 
+        nodes/master_sync
+    DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
+    )
