--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = acde72e
-	trimbase = 
+	base = 1e9c3b3
+	trimbase = acde72e
 	parent = upstream
 	previous = 600deae
