--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = 151ce65
-	trimbase = e142027
+	trimbase = 
 	parent = upstream
 	previous = c8780cb
