--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = 1d7f7e3
-	trimbase = 
+	base = a24762f
+	trimbase = 1d7f7e3
 	parent = upstream
 	previous = 600deae
