--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 3537bbb
-	trimbase = 
+	base = b5b87ef
+	trimbase = 3537bbb
 	parent = upstream
 	previous = 600deae
