--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 9bea093
-	trimbase = 
+	base = 3d3aef8
+	trimbase = 9bea093
 	parent = upstream
 	previous = 600deae
