--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 0d15191
-	trimbase = 
+	base = 5335d10
+	trimbase = 0d15191
 	parent = upstream
 	previous = 600deae
