--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 12e1df9
-	trimbase = 
+	base = d769835
+	trimbase = 12e1df9
 	parent = upstream
 	previous = 600deae
