--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = 7e2bd78
-	trimbase = 
+	base = 6ab1ec8
+	trimbase = 7e2bd78
 	parent = upstream
 	previous = 600deae
