--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = a24762f
-	trimbase = 1d7f7e3
+	trimbase = 
 	parent = upstream
 	previous = 600deae
