--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = e9d95b6
-	trimbase = 
+	base = a39bf7a
+	trimbase = e9d95b6
 	parent = upstream
 	previous = 600deae
