--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 81f5d25
-	trimbase = 
+	base = 3000598
+	trimbase = 81f5d25
 	parent = upstream
 	previous = 600deae
