--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 9574d15
-	trimbase = 
+	base = accb446
+	trimbase = 9574d15
 	parent = upstream
 	previous = 600deae
