Imported upstream version '0.3.0' of 'upstream'

--- a/node_manager_fkie/CMakeLists.txt
+++ b/node_manager_fkie/CMakeLists.txt
@@ -1,9 +1,9 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(node_manager_fkie)
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED multimaster_msgs_fkie master_discovery_fkie)
 
 catkin_python_setup()
-catkin_package()
+catkin_package(CATKIN_DEPENDS multimaster_msgs_fkie master_discovery_fkie)
 
 install(
     PROGRAMS 
