--- a/master_sync_fkie/CMakeLists.txt
+++ b/master_sync_fkie/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(master_sync_fkie)
-find_package(catkin REQUIRED)
+find_package(catkin REQUIRED multimaster_msgs_fkie master_discovery_fkie)
 
 catkin_package()
 catkin_python_setup()
