--- a/multimaster_fkie/package.xml
+++ b/multimaster_fkie/package.xml
@@ -5,7 +5,7 @@
      This requires no or minimal configuration. The changes are automatically detected 
      and synchronized.
   </description>
-  <version>0.2.2</version>
+  <version>0.3.1</version>
   <license>BSD</license>
   <author>Alexander Tiderko</author>
   <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
@@ -13,6 +13,7 @@
   
   <buildtool_depend>catkin</buildtool_depend>
   
+  <run_depend>multimaster_msgs_fkie</run_depend>
   <run_depend>default_cfg_fkie</run_depend>
   <run_depend>master_discovery_fkie</run_depend>
   <run_depend>master_sync_fkie</run_depend>
