--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = d583359
-	trimbase = 
+	trim = multimaster_msgs_fkie
+	base = 7f7db9a
+	trimbase = d583359
 	parent = upstream
 	previous = a489096
