--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 43ead35
-	trimbase = 
+	base = c58195d
+	trimbase = 43ead35
 	parent = upstream
 	previous = a489096
