--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 0b86736
-	trimbase = 
+	base = 7d7fee7
+	trimbase = 0b86736
 	parent = upstream
 	previous = a489096
