--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = 6ab1ec8
-	trimbase = 7e2bd78
+	trimbase = 
 	parent = upstream
 	previous = 600deae
