--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = 967b805
-	trimbase = 
+	base = aee190a
+	trimbase = 967b805
 	parent = upstream
 	previous = a489096
