--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 3bf1147
-	trimbase = 
+	base = 9f3dec8
+	trimbase = 3bf1147
 	parent = upstream
 	previous = a489096
