--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 10149af
-	trimbase = 
+	base = 80e19be
+	trimbase = 10149af
 	parent = upstream
 	previous = a489096
