--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7f7db9a
+	base = 04f3c22
 	trimbase = 
 	parent = release/groovy/multimaster_msgs_fkie
-	previous = 
+	previous = 7f7db9a
