--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5abcf59
+	base = 64a4bbd
 	trimbase = 
 	parent = debian/groovy/multimaster_msgs_fkie
-	previous = 
+	previous = 5abcf59
