--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = 2d14d55
-	trimbase = 
+	base = 10f2b1c
+	trimbase = 2d14d55
 	parent = upstream
 	previous = b228d9d
