--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 0865d25
-	trimbase = 
+	base = 099f088
+	trimbase = 0865d25
 	parent = upstream
 	previous = b228d9d
