--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 3db3873
-	trimbase = 
+	base = b32444c
+	trimbase = 3db3873
 	parent = upstream
 	previous = b228d9d
