--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = c652c98
-	trimbase = 
+	base = 568b969
+	trimbase = c652c98
 	parent = upstream
 	previous = b228d9d
