--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 0a6d6cc
-	trimbase = 
+	base = 717c6e4
+	trimbase = 0a6d6cc
 	parent = upstream
 	previous = b228d9d
