--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 0e11097
-	trimbase = 
+	base = e3fcb52
+	trimbase = 0e11097
 	parent = upstream
 	previous = b228d9d
