--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = 650f420
-	trimbase = fbfc468
+	trimbase = 
 	parent = upstream
 	previous = b228d9d
