--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = dfe9fe1
-	trimbase = 
+	base = 006360b
+	trimbase = dfe9fe1
 	parent = upstream
 	previous = b228d9d
