--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 7a6c731
-	trimbase = 
+	base = 9a33a36
+	trimbase = 7a6c731
 	parent = upstream
 	previous = b228d9d
