Imported upstream version '0.3.2' of 'upstream'

--- a/node_manager_fkie/CMakeLists.txt
+++ b/node_manager_fkie/CMakeLists.txt
@@ -9,6 +9,7 @@ install(
     PROGRAMS 
         nodes/node_manager
         scripts/remote_nm.py
+        scripts/respawn
     DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
     )
 
