--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
 	base = 87aa846
-	trimbase = d3fc054
+	trimbase = 
 	parent = upstream
 	previous = b228d9d
