--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = 75ba575
-	trimbase = 
+	base = 6254780
+	trimbase = 75ba575
 	parent = upstream
 	previous = 7094dbd
