--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 13a9a2c
-	trimbase = 
+	base = 2dee145
+	trimbase = 13a9a2c
 	parent = upstream
 	previous = 7094dbd
