--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = ca50e79
-	trimbase = 
+	base = 1a121b0
+	trimbase = ca50e79
 	parent = upstream
 	previous = 7094dbd
