--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = 6a86176
-	trimbase = 95a5c38
+	trimbase = 
 	parent = upstream
 	previous = b228d9d
