--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = ee3dae9
-	trimbase = 
+	base = 5b952c4
+	trimbase = ee3dae9
 	parent = upstream
 	previous = 7094dbd
