--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 58de18b
-	trimbase = 
+	base = 668037f
+	trimbase = 58de18b
 	parent = upstream
 	previous = 7094dbd
