--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = a06b0f1
-	trimbase = 
+	base = 4f1f45c
+	trimbase = a06b0f1
 	parent = upstream
 	previous = 7094dbd
