--- a/node_manager_fkie/plugin.xml
+++ b/node_manager_fkie/plugin.xml
@@ -1,10 +1,10 @@
 <library path="src">
-  <class name="Node Manager FKIE" type="node_manager_fkie.rqt_node_manager.NodeManager" base_class_type="rqt_gui_py::Plugin">
+  <class name="FKIE Node Manager" type="node_manager_fkie.rqt_node_manager.NodeManager" base_class_type="rqt_gui_py::Plugin">
     <description>
       A Python GUI plugin for managing the ROS nodes and multimaster.
     </description>
     <qtgui>
-      <label>Node Manager FKIE</label>
+      <label>FKIE Node Manager</label>
       <icon type="theme">applications-other</icon>
       <statustip>A Python GUI plugin for managing the ROS node and multimaster.</statustip>
     </qtgui>
