--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 379ddc7
-	trimbase = 
+	trim = master_sync_fkie
+	base = c8e6d6d
+	trimbase = 379ddc7
 	parent = upstream
 	previous = bf29e97
