--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fb3aa53
-	trimbase = 
+	trim = node_manager_fkie
+	base = f359663
+	trimbase = fb3aa53
 	parent = upstream
 	previous = bf29e97
