--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fcd52cb
-	trimbase = 
+	trim = master_discovery_fkie
+	base = da05ffe
+	trimbase = fcd52cb
 	parent = upstream
 	previous = bf29e97
