--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = f9d6880
-	trimbase = 
+	trim = default_cfg_fkie
+	base = 33893a0
+	trimbase = f9d6880
 	parent = upstream
 	previous = bf29e97
