--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 0fcc2c0
-	trimbase = 
+	trim = multimaster_fkie
+	base = f902f99
+	trimbase = 0fcc2c0
 	parent = upstream
 	previous = bf29e97
