--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f359663
+	base = c07892b
 	trimbase = 
 	parent = release/hydro/node_manager_fkie
-	previous = 
+	previous = f359663
