--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fadd5e7
+	base = 19b009a
 	trimbase = 
 	parent = debian/hydro/node_manager_fkie
-	previous = 
+	previous = fadd5e7
