--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 33893a0
+	base = 61d6bca
 	trimbase = 
 	parent = release/hydro/default_cfg_fkie
-	previous = 
+	previous = 33893a0
