--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 58db787
+	base = 7c06376
 	trimbase = 
 	parent = debian/hydro/default_cfg_fkie
-	previous = 
+	previous = 58db787
