--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f902f99
+	base = 6dd100c
 	trimbase = 
 	parent = release/hydro/multimaster_fkie
-	previous = 
+	previous = f902f99
