--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4aed078
+	base = f27fa8d
 	trimbase = 
 	parent = debian/hydro/multimaster_fkie
-	previous = 
+	previous = 4aed078
