--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f25c1fc
+	base = 4610f24
 	trimbase = 
 	parent = release/hydro/multimaster_msgs_fkie
-	previous = 
+	previous = f25c1fc
