--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b0c8bd7
+	base = 43c6090
 	trimbase = 
 	parent = debian/hydro/multimaster_msgs_fkie
-	previous = 
+	previous = b0c8bd7
