--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = da05ffe
+	base = 35ebe79
 	trimbase = 
 	parent = release/hydro/master_discovery_fkie
-	previous = 
+	previous = da05ffe
