--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 83d4e76
+	base = 0253cf1
 	trimbase = 
 	parent = debian/hydro/master_discovery_fkie
-	previous = 
+	previous = 83d4e76
