--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = c8e6d6d
+	base = 9aa7355
 	trimbase = 
 	parent = release/hydro/master_sync_fkie
-	previous = 
+	previous = c8e6d6d
