--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = e5cf387
+	base = 7d4157a
 	trimbase = 
 	parent = debian/hydro/master_sync_fkie
-	previous = 
+	previous = e5cf387
