--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 0a7af1d
-	trimbase = 
+	base = 617d759
+	trimbase = 0a7af1d
 	parent = upstream
 	previous = e1def52
