--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 5f780be
-	trimbase = 
+	base = 499bc19
+	trimbase = 5f780be
 	parent = upstream
 	previous = e1def52
