--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = 5b952c4
-	trimbase = ee3dae9
+	trimbase = 
 	parent = upstream
 	previous = 7094dbd
