--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = ef0da30
-	trimbase = 
+	base = 0ae03fc
+	trimbase = ef0da30
 	parent = upstream
 	previous = e1def52
