--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 60e7878
-	trimbase = 
+	base = ed49988
+	trimbase = 60e7878
 	parent = upstream
 	previous = e1def52
