--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 3a5f140
-	trimbase = 
+	base = c99c2db
+	trimbase = 3a5f140
 	parent = upstream
 	previous = e1def52
