--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
 	base = f25c1fc
-	trimbase = 37228e7
+	trimbase = 
 	parent = upstream
 	previous = bf29e97
