--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = f075869
-	trimbase = 
+	base = 15a0f3f
+	trimbase = f075869
 	parent = upstream
 	previous = e1def52
