--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 86346e8
-	trimbase = 
+	base = 5ebcd57
+	trimbase = 86346e8
 	parent = upstream
 	previous = e1def52
