--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = da05ffe
-	trimbase = fcd52cb
+	trimbase = 
 	parent = upstream
 	previous = bf29e97
