--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = 18b6bb3
-	trimbase = 
+	base = 72d5a39
+	trimbase = 18b6bb3
 	parent = upstream
 	previous = e1def52
