--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 0ce8272
-	trimbase = 
+	base = 0bfea0e
+	trimbase = 0ce8272
 	parent = upstream
 	previous = e1def52
