--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = f7dcc9c
-	trimbase = 
+	base = b1f3ca4
+	trimbase = f7dcc9c
 	parent = upstream
 	previous = e1def52
