--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
 	base = f3f5983
-	trimbase = 36caf39
+	trimbase = 
 	parent = upstream
 	previous = e1def52
