--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = 032dbc7
-	trimbase = 
+	base = 0fcf2d6
+	trimbase = 032dbc7
 	parent = upstream
 	previous = 043af40
