--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = b47e7f9
-	trimbase = 
+	base = 9c9b6df
+	trimbase = b47e7f9
 	parent = upstream
 	previous = 043af40
