--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 666f07d
-	trimbase = 
+	base = 87286d0
+	trimbase = 666f07d
 	parent = upstream
 	previous = 043af40
