--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = f69eb2d
-	trimbase = 
+	base = bf33ae8
+	trimbase = f69eb2d
 	parent = upstream
 	previous = 043af40
