--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 601679c
-	trimbase = 
+	base = e02601d
+	trimbase = 601679c
 	parent = upstream
 	previous = 043af40
