--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 1027fcf
-	trimbase = 
+	base = e6f4e24
+	trimbase = 1027fcf
 	parent = upstream
 	previous = 043af40
