--- a/releaser_history.json
+++ b/releaser_history.json
@@ -1,1 +1,1 @@
-{"0.3.4": ["Alexander Tiderko", "alexander.tiderko@gmail.com"], "0.3.5": ["Alexander Tiderko", "alexander.tiderko@gmail.com"]}
+{"0.3.6": ["Alexander Tiderko", "alexander.tiderko@gmail.com"], "0.3.4": ["Alexander Tiderko", "alexander.tiderko@gmail.com"], "0.3.5": ["Alexander Tiderko", "alexander.tiderko@gmail.com"]}
