--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
 	base = 003c0fd
-	trimbase = bd326dd
+	trimbase = 
 	parent = upstream
 	previous = e1def52
