--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 6cde9ed
-	trimbase = 
+	base = e08c620
+	trimbase = 6cde9ed
 	parent = upstream
 	previous = 043af40
