--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 99db508
-	trimbase = 
+	base = 7a43609
+	trimbase = 99db508
 	parent = upstream
 	previous = 043af40
