--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = 0ae03fc
-	trimbase = ef0da30
+	trimbase = 
 	parent = upstream
 	previous = e1def52
