--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 738773a
-	trimbase = 
+	base = 16c1f44
+	trimbase = 738773a
 	parent = upstream
 	previous = 043af40
