--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = cfab3f3
-	trimbase = 
+	base = 0549521
+	trimbase = cfab3f3
 	parent = upstream
 	previous = 043af40
