--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = a8270d0
-	trimbase = 
+	base = 80509fb
+	trimbase = a8270d0
 	parent = upstream
 	previous = e2c3c7e
