--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 8dc9281
-	trimbase = 
+	base = 922fb9a
+	trimbase = 8dc9281
 	parent = upstream
 	previous = e2c3c7e
