--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 2e95ea8
-	trimbase = 
+	base = 43b9956
+	trimbase = 2e95ea8
 	parent = upstream
 	previous = e2c3c7e
