--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = bfb68ec
-	trimbase = 
+	base = e3fc1d5
+	trimbase = bfb68ec
 	parent = upstream
 	previous = e2c3c7e
