--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 816fbcd
-	trimbase = 
+	base = 8d4d970
+	trimbase = 816fbcd
 	parent = upstream
 	previous = e2c3c7e
