--- a/package.xml
+++ b/package.xml
@@ -5,7 +5,7 @@
      configured ROS nodes on different hosts. For discovering 
      the running ROS master master_discovery node will be used.
   </description>
-  <version>0.3.6</version>
+  <version>0.3.7</version>
   <license>BSD, some icons are licensed under the GNU Lesser General Public License (LGPL) or Creative Commons Attribution-Noncommercial 3.0 License</license>
   <author>Alexander Tiderko</author>
   <author>Timo Roehling</author>
@@ -31,7 +31,8 @@
   <run_depend>roslaunch</run_depend>
   <run_depend>rosservice</run_depend>
   <run_depend>dynamic_reconfigure</run_depend>
-  
+  <run_depend>rqt_reconfigure</run_depend>
+
   <run_depend>python_qt_binding</run_depend>
   <run_depend>python-paramiko</run_depend>
   <run_depend>python-docutils</run_depend>
