--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
 	base = 737d5ab
-	trimbase = 81d9c51
+	trimbase = 
 	parent = upstream
 	previous = 043af40
