--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = 2de2caa
-	trimbase = 
+	base = fc42d0e
+	trimbase = 2de2caa
 	parent = upstream
 	previous = e2c3c7e
