--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 17110b0
-	trimbase = 
+	base = 5e5e6de
+	trimbase = 17110b0
 	parent = upstream
 	previous = e2c3c7e
