--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = 2877d67
-	trimbase = 5910048
+	trimbase = 
 	parent = upstream
 	previous = 043af40
