--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = cd6ac4e
-	trimbase = 
+	base = 2bea45e
+	trimbase = cd6ac4e
 	parent = upstream
 	previous = e2c3c7e
