--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 4c84260
-	trimbase = 
+	base = df872bb
+	trimbase = 4c84260
 	parent = upstream
 	previous = e2c3c7e
