--- a/default_cfg_fkie/CMakeLists.txt
+++ b/default_cfg_fkie/CMakeLists.txt
@@ -4,7 +4,7 @@ find_package(catkin REQUIRED COMPONENTS multimaster_msgs_fkie)
 
 catkin_python_setup()
 
-catkin_package(CATKIN_DEPENDS multimaster_msgs_fkie)
+catkin_package(CATKIN_DEPENDS multimaster_msgs_fkie roslaunch roslib rospy)
 
 install(
     PROGRAMS 
