--- a/node_manager_fkie/package.xml
+++ b/node_manager_fkie/package.xml
@@ -5,7 +5,7 @@
      configured ROS nodes on different hosts. For discovering 
      the running ROS master master_discovery node will be used.
   </description>
-  <version>0.3.7</version>
+  <version>0.3.8</version>
   <license>BSD, some icons are licensed under the GNU Lesser General Public License (LGPL) or Creative Commons Attribution-Noncommercial 3.0 License</license>
   <author>Alexander Tiderko</author>
   <author>Timo Roehling</author>
@@ -16,9 +16,6 @@
   
   <build_depend>multimaster_msgs_fkie</build_depend>
   <build_depend>master_discovery_fkie</build_depend>
-  <build_depend>master_sync_fkie</build_depend>
-  <build_depend>default_cfg_fkie</build_depend>
-
 
   <run_depend>multimaster_msgs_fkie</run_depend>
   <run_depend>master_discovery_fkie</run_depend>
@@ -38,6 +35,7 @@
   <run_depend>python-docutils</run_depend>
   <run_depend>screen</run_depend>
   <run_depend>xterm</run_depend>
+  <run_depend>rqt_gui</run_depend>
   
   <export>
     <rosdoc config="rosdoc.yaml" />
