--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
 	base = 80509fb
-	trimbase = a8270d0
+	trimbase = 
 	parent = upstream
 	previous = e2c3c7e
