--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = 2959f11
-	trimbase = 
+	base = c1ced04
+	trimbase = 2959f11
 	parent = upstream
 	previous = 65098da
