--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 833c5d9
-	trimbase = 
+	base = cd1c6ff
+	trimbase = 833c5d9
 	parent = upstream
 	previous = 65098da
