--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = adc24f7
-	trimbase = 
+	base = bc7b249
+	trimbase = adc24f7
 	parent = upstream
 	previous = 65098da
