--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = e25ed99
-	trimbase = 0769010
+	trimbase = 
 	parent = upstream
 	previous = e2c3c7e
