--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = 4e9cd94
-	trimbase = 
+	base = 7ea7fcc
+	trimbase = 4e9cd94
 	parent = upstream
 	previous = 65098da
