--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 5d48c25
-	trimbase = 
+	base = 48cbbcc
+	trimbase = 5d48c25
 	parent = upstream
 	previous = 65098da
