--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 8865e52
-	trimbase = 
+	base = ed10ced
+	trimbase = 8865e52
 	parent = upstream
 	previous = 65098da
