--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(node_manager_fkie)
-find_package(catkin REQUIRED multimaster_msgs_fkie master_discovery_fkie)
+find_package(catkin REQUIRED COMPONENTS multimaster_msgs_fkie master_discovery_fkie)
 
 catkin_python_setup()
 catkin_package(CATKIN_DEPENDS multimaster_msgs_fkie master_discovery_fkie)
