--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
 	base = fc42d0e
-	trimbase = 2de2caa
+	trimbase = 
 	parent = upstream
 	previous = e2c3c7e
