--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = fd30447
-	trimbase = 
+	base = c453777
+	trimbase = fd30447
 	parent = upstream
 	previous = 65098da
