--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 92b6f3a
-	trimbase = 
+	base = 778a30b
+	trimbase = 92b6f3a
 	parent = upstream
 	previous = 65098da
