--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = c0583ed
-	trimbase = 
+	base = 294ca5c
+	trimbase = c0583ed
 	parent = upstream
 	previous = 65098da
