--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = 9c5b420
-	trimbase = 548fadf
+	trimbase = 
 	parent = upstream
 	previous = e2c3c7e
