--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = 0b92bbf
-	trimbase = 
+	base = 14cb8a7
+	trimbase = 0b92bbf
 	parent = upstream
 	previous = 65098da
