--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 64f6f30
-	trimbase = 
+	base = 2888637
+	trimbase = 64f6f30
 	parent = upstream
 	previous = 65098da
