--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = d19ee91
-	trimbase = 
+	base = a547900
+	trimbase = d19ee91
 	parent = upstream
 	previous = 65098da
