--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = c9a75d9
-	trimbase = 
+	base = 3d40594
+	trimbase = c9a75d9
 	parent = upstream
 	previous = f3caa97
