--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = cae044f
-	trimbase = 
+	base = ce06c46
+	trimbase = cae044f
 	parent = upstream
 	previous = f3caa97
