--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = 7ea7fcc
-	trimbase = 4e9cd94
+	trimbase = 
 	parent = upstream
 	previous = 65098da
