--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 993814f
-	trimbase = 
+	base = 71614e9
+	trimbase = 993814f
 	parent = upstream
 	previous = f3caa97
