--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 3b16d5a
-	trimbase = 
+	base = 160fa5c
+	trimbase = 3b16d5a
 	parent = upstream
 	previous = f3caa97
