--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = df04116
-	trimbase = 
+	base = 97e8585
+	trimbase = df04116
 	parent = upstream
 	previous = f3caa97
