--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 9e2aa57
-	trimbase = 
+	base = 11bc0c8
+	trimbase = 9e2aa57
 	parent = upstream
 	previous = f3caa97
