--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 5b637ae
-	trimbase = 
+	base = c80b552
+	trimbase = 5b637ae
 	parent = upstream
 	previous = f3caa97
