--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 7d84840
-	trimbase = 
+	base = 53010bd
+	trimbase = 7d84840
 	parent = upstream
 	previous = f3caa97
