--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 7ac2460
-	trimbase = 
+	base = abae5a7
+	trimbase = 7ac2460
 	parent = upstream
 	previous = f3caa97
