--- a/default_cfg_fkie/package.xml
+++ b/default_cfg_fkie/package.xml
@@ -1,11 +1,11 @@
 <package>
   <name>default_cfg_fkie</name>
   <description>
-     A node which loads a given launch configuration and offers services to 
+     The configuration node loads a given launch configuration and offers services to 
      list or start the contained nodes. It provides additional description 
      extracted from launch file. This is used by node_manager_fkie.
   </description>
-  <version>0.3.9</version>
+  <version>0.3.10</version>
   <license>BSD</license>
   <author>Alexander Tiderko</author>
   <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
