--- a/master_sync_fkie/CMakeLists.txt
+++ b/master_sync_fkie/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 2.8.3)
 project(master_sync_fkie)
 find_package(catkin REQUIRED COMPONENTS multimaster_msgs_fkie master_discovery_fkie)
 
-catkin_package()
+catkin_package(CATKIN_DEPENDS multimaster_msgs_fkie)
 catkin_python_setup()
 
 install(
