--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
 	base = 3e45f85
-	trimbase = c23f877
+	trimbase = 
 	parent = upstream
 	previous = f3caa97
