--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = 6149628
-	trimbase = 
+	base = a2f2219
+	trimbase = 6149628
 	parent = upstream
 	previous = f9482aa
