--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 315fb20
-	trimbase = 
+	base = a84d17e
+	trimbase = 315fb20
 	parent = upstream
 	previous = f9482aa
