--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 42e0d0b
-	trimbase = 
+	base = 4e71a9c
+	trimbase = 42e0d0b
 	parent = upstream
 	previous = f9482aa
