--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = 14485d3
-	trimbase = bacce80
+	trimbase = 
 	parent = upstream
 	previous = f3caa97
