--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = 2cd6737
-	trimbase = 
+	base = 88d51fd
+	trimbase = 2cd6737
 	parent = upstream
 	previous = f9482aa
