--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = b9ac033
-	trimbase = 
+	base = c97e7d3
+	trimbase = b9ac033
 	parent = upstream
 	previous = f9482aa
