--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = ea5f160
-	trimbase = 
+	base = e2aadbc
+	trimbase = ea5f160
 	parent = upstream
 	previous = f9482aa
