--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = 2bdf414
-	trimbase = 
+	base = eb4a9be
+	trimbase = 2bdf414
 	parent = upstream
 	previous = 3dbc802
