--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = d6f75a1
-	trimbase = 
+	base = 4c47963
+	trimbase = d6f75a1
 	parent = upstream
 	previous = 3dbc802
