--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 3295ced
-	trimbase = 
+	base = 767405b
+	trimbase = 3295ced
 	parent = upstream
 	previous = 3dbc802
