--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = 7f66184
-	trimbase = de9b776
+	trimbase = 
 	parent = upstream
 	previous = f3caa97
