--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = 006180e
-	trimbase = 
+	base = f9998d3
+	trimbase = 006180e
 	parent = upstream
 	previous = 3dbc802
