--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 2dcd1e6
-	trimbase = 
+	base = 1ccdd1b
+	trimbase = 2dcd1e6
 	parent = upstream
 	previous = 3dbc802
