--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = e0f8e08
-	trimbase = 
+	base = a34a5a3
+	trimbase = e0f8e08
 	parent = upstream
 	previous = 3dbc802
