--- a/package.xml
+++ b/package.xml
@@ -1,9 +1,9 @@
 <package>
   <name>multimaster_msgs_fkie</name>
   <description>
-     The package with multimaster messages.
+     The messages required by multimaster packages.
   </description>
-  <version>0.3.9</version>
+  <version>0.3.11</version>
   <license>BSD</license>
   <author>Alexander Tiderko</author>
   <maintainer email="alexander.tiderko@gmail.com">Alexander Tiderko</maintainer>
