--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = fc73c77
-	trimbase = 
+	base = 607cec7
+	trimbase = fc73c77
 	parent = upstream
 	previous = 3dbc802
