--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 8293a58
-	trimbase = 
+	base = 5d54498
+	trimbase = 8293a58
 	parent = upstream
 	previous = 3dbc802
