--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = f1f4907
-	trimbase = 
+	base = 75557e4
+	trimbase = f1f4907
 	parent = upstream
 	previous = 3dbc802
