--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = 7fd9443
-	trimbase = 
+	base = a399d08
+	trimbase = 7fd9443
 	parent = upstream
 	previous = 3dbc802
