--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = f30e388
-	trimbase = 
+	base = c133314
+	trimbase = f30e388
 	parent = upstream
 	previous = 3dbc802
