--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = b26ab04
-	trimbase = 
+	base = 2c944bc
+	trimbase = b26ab04
 	parent = upstream
 	previous = 3dbc802
