--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
 	base = 607cec7
-	trimbase = fc73c77
+	trimbase = 
 	parent = upstream
 	previous = 3dbc802
