--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = 9729695
-	trimbase = 
+	base = 2a07b1d
+	trimbase = 9729695
 	parent = upstream
 	previous = ff7a6b2
