--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 18ef721
-	trimbase = 
+	base = c19095e
+	trimbase = 18ef721
 	parent = upstream
 	previous = ff7a6b2
