--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 398642b
-	trimbase = 
+	base = 397f258
+	trimbase = 398642b
 	parent = upstream
 	previous = ff7a6b2
