--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = f3f6a27
-	trimbase = 
+	base = 812c161
+	trimbase = f3f6a27
 	parent = upstream
 	previous = ff7a6b2
