--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 86a17bf
-	trimbase = 
+	base = fd4332d
+	trimbase = 86a17bf
 	parent = upstream
 	previous = ff7a6b2
