--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 95b3556
-	trimbase = 
+	base = a846e59
+	trimbase = 95b3556
 	parent = upstream
 	previous = ff7a6b2
