--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = 0fb7265
-	trimbase = 
+	base = 045bbd4
+	trimbase = 0fb7265
 	parent = upstream
 	previous = ff7a6b2
