--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 707fff5
-	trimbase = 
+	base = 1d03d9d
+	trimbase = 707fff5
 	parent = upstream
 	previous = ff7a6b2
