--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 2b34837
-	trimbase = 
+	base = bf03568
+	trimbase = 2b34837
 	parent = upstream
 	previous = ff7a6b2
