--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = f9998d3
-	trimbase = 006180e
+	trimbase = 
 	parent = upstream
 	previous = 3dbc802
