--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = 9982dd8
-	trimbase = 
+	base = 5f2bace
+	trimbase = 9982dd8
 	parent = upstream
 	previous = ff7a6b2
