--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = a83b0d8
-	trimbase = 
+	base = ce6d46c
+	trimbase = a83b0d8
 	parent = upstream
 	previous = ff7a6b2
