--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = c04cdfb
-	trimbase = 
+	base = a88bdeb
+	trimbase = c04cdfb
 	parent = upstream
 	previous = ff7a6b2
