--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
 	base = 045bbd4
-	trimbase = 0fb7265
+	trimbase = 
 	parent = upstream
 	previous = ff7a6b2
