--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = 9acca69
-	trimbase = 
+	base = d1be7b4
+	trimbase = 9acca69
 	parent = upstream
 	previous = b055ba4
