--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 2b2acea
-	trimbase = 
+	base = 61d1c7b
+	trimbase = 2b2acea
 	parent = upstream
 	previous = b055ba4
