--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 18a3543
-	trimbase = 
+	base = 81d8593
+	trimbase = 18a3543
 	parent = upstream
 	previous = b055ba4
