--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
 	base = 5f2bace
-	trimbase = 9982dd8
+	trimbase = 
 	parent = upstream
 	previous = ff7a6b2
