--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = 0a498d7
-	trimbase = 
+	base = a55b5dc
+	trimbase = 0a498d7
 	parent = upstream
 	previous = b055ba4
