--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = c3a225f
-	trimbase = 
+	base = 26dccdd
+	trimbase = c3a225f
 	parent = upstream
 	previous = b055ba4
