--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 6a211ac
-	trimbase = 
+	base = 47afdf7
+	trimbase = 6a211ac
 	parent = upstream
 	previous = b055ba4
