--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
 	base = 2a07b1d
-	trimbase = 9729695
+	trimbase = 
 	parent = upstream
 	previous = ff7a6b2
