--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_msgs_fkie
-	base = 6313438
-	trimbase = 
+	base = 042e125
+	trimbase = 6313438
 	parent = upstream
 	previous = b055ba4
