--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_sync_fkie
-	base = 919873a
-	trimbase = 
+	base = a4085aa
+	trimbase = 919873a
 	parent = upstream
 	previous = b055ba4
