--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = node_manager_fkie
-	base = 5f4aba7
-	trimbase = 
+	base = fcbeb8e
+	trimbase = 5f4aba7
 	parent = upstream
 	previous = b055ba4
