--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = master_discovery_fkie
-	base = a6f4441
-	trimbase = 
+	base = f049d4e
+	trimbase = a6f4441
 	parent = upstream
 	previous = b055ba4
