--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = default_cfg_fkie
-	base = 687b443
-	trimbase = 
+	base = 0332ec5
+	trimbase = 687b443
 	parent = upstream
 	previous = b055ba4
