--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = multimaster_fkie
-	base = 5ddf3c0
-	trimbase = 
+	base = 8f04c91
+	trimbase = 5ddf3c0
 	parent = upstream
 	previous = b055ba4
