--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = fcbeb8e
+	base = 2fccde2
 	trimbase = 
 	parent = release/hydro/node_manager_fkie
-	previous = 
+	previous = fcbeb8e
