--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4b26036
+	base = 66fc8e8
 	trimbase = 
 	parent = rpm/hydro/node_manager_fkie
-	previous = 
+	previous = 4b26036
