--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 0332ec5
+	base = 66db20f
 	trimbase = 
 	parent = release/hydro/default_cfg_fkie
-	previous = 
+	previous = 0332ec5
