--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = ed66b44
+	base = 8178a22
 	trimbase = 
 	parent = rpm/hydro/default_cfg_fkie
-	previous = 
+	previous = ed66b44
