--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 8f04c91
+	base = 6ab6a19
 	trimbase = 
 	parent = release/hydro/multimaster_fkie
-	previous = 
+	previous = 8f04c91
