--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 4d5d248
+	base = e3e3431
 	trimbase = 
 	parent = rpm/hydro/multimaster_fkie
-	previous = 
+	previous = 4d5d248
