--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 042e125
+	base = 6806c2a
 	trimbase = 
 	parent = release/hydro/multimaster_msgs_fkie
-	previous = 
+	previous = 042e125
