--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b06661b
+	base = c98c657
 	trimbase = 
 	parent = rpm/hydro/multimaster_msgs_fkie
-	previous = 
+	previous = b06661b
