--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = f049d4e
+	base = da9ea25
 	trimbase = 
 	parent = release/hydro/master_discovery_fkie
-	previous = 
+	previous = f049d4e
