--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = cf4a357
+	base = f1ddef7
 	trimbase = 
 	parent = rpm/hydro/master_discovery_fkie
-	previous = 
+	previous = cf4a357
