--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = a4085aa
+	base = 4d7b05e
 	trimbase = 
 	parent = release/hydro/master_sync_fkie
-	previous = 
+	previous = a4085aa
