--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 9242181
+	base = cd34ff4
 	trimbase = 
 	parent = rpm/hydro/master_sync_fkie
-	previous = 
+	previous = 9242181
