--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 8316775
-	trimbase = 
+	trim = multimaster_msgs_fkie
+	base = af71646
+	trimbase = 8316775
 	parent = upstream
 	previous = b055ba4
