--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 451b407
-	trimbase = 
+	trim = master_sync_fkie
+	base = 224beb5
+	trimbase = 451b407
 	parent = upstream
 	previous = b055ba4
