--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = c362f60
-	trimbase = 
+	trim = node_manager_fkie
+	base = 6ff69f9
+	trimbase = c362f60
 	parent = upstream
 	previous = b055ba4
