--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = fb8dc98
-	trimbase = 
+	trim = master_discovery_fkie
+	base = a858e09
+	trimbase = fb8dc98
 	parent = upstream
 	previous = b055ba4
