--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 891e56b
-	trimbase = 
+	trim = default_cfg_fkie
+	base = 825ecd0
+	trimbase = 891e56b
 	parent = upstream
 	previous = b055ba4
