--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = ff94230
-	trimbase = 
+	trim = multimaster_fkie
+	base = a6864a2
+	trimbase = ff94230
 	parent = upstream
 	previous = b055ba4
