--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 224beb5
+	base = 3f70286
 	trimbase = 
 	parent = release/indigo/master_sync_fkie
-	previous = 
+	previous = 224beb5
